// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Provider value 1`] = `
NodeList [
  10,
]
`;

exports[`initData-function 1`] = `
NodeList [
  1,
  1,
  1,
]
`;

exports[`initData-normal 1`] = `
NodeList [
  1,
  1,
  1,
]
`;

exports[`initData-undefined 1`] = `
NodeList [
  undefined,
  undefined,
  undefined,
]
`;

exports[`onclick 1`] = `
NodeList [
  <button
    id="click"
  >
    Efect
  </button>,
  Efect,
  Efect,
]
`;

exports[`onclick 2`] = `
NodeList [
  <button
    id="click"
  >
    Click
  </button>,
  Click,
  Click,
]
`;

exports[`remove 1`] = `
NodeList [
  1,
  1,
]
`;

exports[`useEffect 1`] = `
NodeList [
  Effect,
  Effect,
  Effect,
]
`;
